# robophone

./: .gitignore  README.md  __init__.py  config.py  groq_client.py  pyproject.toml  report.py  runner.py  sample_tests.json  tests.py
ground_eval/: README.md  __init__.py  config.py  evaluation_checklist.md  groq_client.py  output_report_baseline.json  output_report_no_doc.json  report.py  robophone_llm_baseline_instructions.md  robophone_llm_instructions.md  runner.py  sample_tests.json  tests.py
vision_rt/: README.md  __init__.py  benchmark.py  camera_check.py  config.py  demo.py  detector.py  distance.py  face_refine.py  pipeline.py
