[project]
name = "robophone-ground-eval"
version = "0.1.0"
description = "Lightweight Groq grounding evaluation harness for Robophone documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.15.0",
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
    "ultralytics>=8.4.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
